--- a/app.json
+++ b/app.json
@@ -28,6 +28,8 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "Popular word guessing game",
+    "githubUrl": "https://github.com/Tamar-J/wordle-mobile"
   }
 }
