--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~45.0.0",
     "expo-clipboard": "~3.0.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -20,7 +21,10 @@
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "^18.0.21",
+    "@types/react-native": "^0.70.4",
+    "typescript": "^4.8.4"
   },
   "private": true
 }
