--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wordle",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,17 +10,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "expo": "~45.0.0",
     "expo-clipboard": "~3.0.1",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
+    "lottie-react-native": "^5.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
-    "react-native-web": "0.17.7",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "react-native-reanimated": "~2.8.0"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
