--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "expo": "~45.0.0",
-    "expo-clipboard": "~3.0.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.3",
-    "lottie-react-native": "^5.1.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-web": "0.17.7"
+    "expo": "~47.0.9",
+    "expo-clipboard": "~4.0.1",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "lottie-react-native": "5.1.4",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.8",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
